# kabuki

./: .gitmodules  CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  engine.cpp  engine.hpp  engine_component.hpp  kabuki.hpp  window.cpp  window.hpp
engine/include/: engine.hpp  engine_component.hpp  entity.hpp  kabuki.hpp  scene.hpp  stage.hpp  window.hpp
engine/include/audio/: audio_emitter.hpp  audio_listener.hpp  audio_manager.hpp  audio_stream.hpp  audio_utils.hpp  ogg_file.hpp  wav_file.hpp
engine/include/events/: event.hpp  event_hub.hpp
engine/include/input/: input_codes.hpp  input_manager.hpp  keyboard_state.hpp
engine/include/utility/: log.hpp  memory_utils.hpp  path_utils.hpp
engine/src/: engine.cpp  entity.cpp  stage.cpp  window.cpp
engine/src/audio/: audio_emitter.cpp  audio_listener.cpp  audio_manager.cpp  ogg_file.cpp  wav_file.cpp
engine/src/input/: input_manager.cpp  keyboard.cpp
engine/src/utility/: log.cpp
engine/utility/: log.cpp  log.hpp
